# dancebooks2

./: .editorconfig  CMakeLists.txt  README.md
doc/: bild.md
libs/common/: CMakeLists.txt  Makefile  exception.cpp
libs/common/include/hda/common/: exception.hpp  pimpl_utils.hpp
libs/common/tests/: test_exception.cpp  test_pimpl_utils.cpp
libs/db/: CMakeLists.txt  Makefile  connection.cpp  connection_impl.hpp  pool.cpp  settings.cpp  transaction.cpp  transaction_impl.hpp
libs/db/include/hda/db/: connection.hpp  fwd.hpp  pool.hpp  settings.hpp  transaction.hpp
libs/db/tests/: config.h.in  test_connection_pool.cpp
tools/CMakeModules/: DanceBooksCommon.cmake  FindPQXX.cmake
tools/bild/: Makefile  bild.mk  install.mk  lib.mk  test.mk
